# cxcu

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: cxcuConfig.cmake.in
examples/: CMakeLists.txt  README.md  device_query.c  nvrtc_vector_scale.c
examples/kernels/: clangd_cuda_compat.h  vector_math.h  vector_scale.cu
include/cxcu/: cxcu.h
src/: cxcu.c
tests/: CMakeLists.txt  benchmark_curve.py  cxcu.batched_parameter_sweep.test.c  cxcu.grid_bench.test.c  cxcu.test.c  run_benchmark_curve.sh
